--- a/Downloader/Downloader/DownloaderTests/DownloaderTests.csproj
+++ b/Downloader/Downloader/DownloaderTests/DownloaderTests.csproj
@@ -48,8 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="Class2.cs" />
+    <Compile Include="CsvTests.cs" />
+    <Compile Include="YqlTests.cs" />
+    <Compile Include="Option.cs" />
+    <Compile Include="OptionsChain.cs" />
+    <Compile Include="OptionsChainResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="Quote.cs" />
