Cleaned up some more but we need to figure out some reuse in the Downloaders will be a copy paste fest if not

--- a/Downloader/Downloader/DownloaderTests/DownloaderTests.csproj
+++ b/Downloader/Downloader/DownloaderTests/DownloaderTests.csproj
@@ -50,7 +50,7 @@
   <ItemGroup>
     <Compile Include="CsvTests.cs" />
     <Compile Include="QueryBuilderTests.cs" />
-    <Compile Include="YqlTests.cs" />
+    <Compile Include="DownloadersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
