--- a/Downloader/Downloader/Downloader.csproj
+++ b/Downloader/Downloader/Downloader.csproj
@@ -42,18 +42,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="Option.cs" />
-    <Compile Include="OptionsChain.cs" />
-    <Compile Include="OptionsChainResults.cs" />
+    <Compile Include="Downloaders\HistoricalDataDownloader.cs" />
+    <Compile Include="Downloaders\OptionsDownloader.cs" />
+    <Compile Include="Downloaders\QuoteDownloader.cs" />
+    <Compile Include="Dtos\HistoricalDataResults.cs" />
+    <Compile Include="Dtos\Option.cs" />
+    <Compile Include="Dtos\OptionsChain.cs" />
+    <Compile Include="Dtos\OptionsChainResults.cs" />
+    <Compile Include="Helpers\ReturnType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query.cs" />
-    <Compile Include="QueryBuilder.cs" />
-    <Compile Include="QueryParameter.cs" />
-    <Compile Include="Quote.cs" />
-    <Compile Include="Results.cs" />
-    <Compile Include="RootObject.cs" />
-    <Compile Include="SerializerExt.cs" />
+    <Compile Include="Dtos\Query.cs" />
+    <Compile Include="Helpers\QueryBuilder.cs" />
+    <Compile Include="Helpers\QueryParameter.cs" />
+    <Compile Include="Dtos\Quote.cs" />
+    <Compile Include="Dtos\EodPoint.cs" />
+    <Compile Include="Dtos\QuotesResults.cs" />
+    <Compile Include="Dtos\QuoteResults.cs" />
+    <Compile Include="Dtos\RootObject.cs" />
+    <Compile Include="Helpers\SerializerExt.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
