--- a/Downloader/DownloaderTests/DownloaderTests.csproj
+++ b/Downloader/DownloaderTests/DownloaderTests.csproj
@@ -52,8 +52,8 @@
     <Compile Include="DownloadersTests\OptionsDownloaderTests.cs" />
     <Compile Include="DownloadersTests\SectorsDownloaderTests.cs" />
     <Compile Include="DownloadersTests\StockDownloaderTests.cs" />
-    <Compile Include="GlobalizationTests.cs" />
-    <Compile Include="ProxyTests.cs" />
+    <Compile Include="Prototypes\GlobalizationPrototype.cs" />
+    <Compile Include="Prototypes\ProxyPrototypes.cs" />
     <Compile Include="QueryBuilderTests.cs" />
     <Compile Include="DownloadersTests\QuoteDownloaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
